# juvix

./: .dockerignore  .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.yml  Dockerfile  LICENSE  README.md  juvix.cabal  juvix.sh  stack.yaml
app/: Codegen.hs  Config.hs  Idris.hs  Interactive.hs  Main.hs  Options.hs
doc/: CONTRIBUTING.md  EXAMPLES.md  OVERVIEW.md  TUTORIAL.md
doc/examples/: identity.idr  swap.idr
doc/v1/: ARCHITECTURE.md  EXAMPLES.md  ROADMAP.md
doc/v2/: OVERVIEW.md
lib/Juvix/: Lib.hs
scripts/: precommit.sh
src/: IdrisCG.hs  Juvix.hs
src/Juvix/: Core.hs  Emit.hs  Frontend.hs  GHC.hs  Interactive.hs  Interpreter.hs  Michelson.hs  Optimization.hs  PrettyPrint.hs  Reduction.hs  Script.hs  Transpiler.hs  Types.hs  Utility.hs
src/Juvix/Backends/: Michelson.hs  Type.hs
src/Juvix/Backends/Michelson/: Emit.hs  Interpreter.hs  Lift.hs  Optimization.hs  Types.hs
src/Juvix/Core/: CompilerTypes.hs  Dynamic.hs  GHC.hs  Types.hs  Utility.hs
src/Juvix/Frontend/: GHC.hs  Type.hs
src/Juvix/Frontend/Idris/: CodeGen.hs
src/Juvix/Michelson/: Emit.hs  Interpreter.hs  Lift.hs  Optimization.hs  Script.hs
src/Juvix/Transpiler/: CoreToExpr.hs  CoreToType.hs  Encoding.hs  ExprToMichelson.hs  GHC.hs  PrettyPrint.hs  SimplifyExpr.hs  TypeToType.hs  Utility.hs
src/Juvix/Utility/: PrettyPrint.hs  Types.hs
test/: Code.hs  Main.hs  Types.hs
test/Code/: Basic.hs  Examples.hs  Features.hs  MichelsonLang.hs  SideEffects.hs
test/code/basic/: add.hs  add.tz.expected  identity-four.hs  identity-one.hs  identity-three.hs  identity-two.hs  identity-two.tz.expected  swap.hs  swap.tz.expected
test/code/features/: case.hs  case.tz.expected  polymorphism.hs  polymorphism.tz.expected
test/code/michelson-lang/: atleast.hs  atleast.tz.expected
test/code/side-effects/: send.hs  send.tz.expected
