name:                juvix
version:             0.2.0.0
synopsis:            Juvix smart contract transpiler & toolkit
description:         Juvix is an optimizing smart contract source-to-source transpiler and toolkit, designed to abstract over the particulars of distributed ledger backends and enable smart contract developers to model contract interactions, player incentives, and mathematical invariants with precision.
homepage:            https://github.com/cwgoes/juvix#readme
author:              Christopher Goes
maintainer:          cwgoes@protonmail.ch
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          lib/Juvix/Lib.hs

executable juvix
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
                       Config
                       Interactive
                       Idris
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NoMonomorphismRestriction
                     , RankNTypes
                     , LambdaCase
                     , UnicodeSyntax
                     , GADTs
                     , ScopedTypeVariables
                     , MultiParamTypeClasses
                     , FlexibleContexts
                     , FunctionalDependencies
                     , DeriveGeneric
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , TypeOperators
                     , InstanceSigs
                     , ExistentialQuantification
                     , QuasiQuotes
                     , ConstraintKinds
                     , GeneralizedNewtypeDeriving
                     , DeriveAnyClass
                     , DerivingStrategies
                     , DefaultSignatures
  build-depends:       base >= 4.10.0.0 && < 5
                     , foundation
                     , optparse-applicative
                     , ansi-wl-pprint
                     , raw-strings-qq
                     , yaml
                     , aeson
                     , gitrev
                     , text
                     , haskeline
                     , directory
                     , juvix
                     , idris
  ghc-options:         -j4 -ferror-spans -Wall -fno-warn-orphans -fno-warn-name-shadowing -threaded -rtsopts -O0

test-suite test-juvix
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Types
                       Code
                       Code.Basic
                       Code.Examples
                       Code.Features
                       Code.MichelsonLang
                       Code.SideEffects
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NoMonomorphismRestriction
                     , RankNTypes
                     , LambdaCase
                     , UnicodeSyntax
                     , GADTs
                     , ScopedTypeVariables
                     , MultiParamTypeClasses
                     , FlexibleContexts
                     , FunctionalDependencies
                     , DeriveGeneric
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , TypeOperators
                     , InstanceSigs
                     , ExistentialQuantification
                     , QuasiQuotes
                     , ConstraintKinds
                     , GeneralizedNewtypeDeriving
                     , DeriveAnyClass
                     , DerivingStrategies
                     , DefaultSignatures
  build-depends:       base >= 4.10.0.0 && < 5
                     , foundation
                     , tasty
                     , tasty-hunit
                     , temporary
                     , raw-strings-qq
                     , text
                     , juvix
  ghc-options:         -j4 -ferror-spans -Wall -fno-warn-orphans -fno-warn-name-shadowing -threaded -rtsopts -O0

library
  hs-source-dirs:      src
  exposed-modules:     Juvix
                       IdrisCG
                       Juvix.Interpreter 
                       Juvix.Frontend
                       Juvix.Backends.Michelson
                       Juvix.Backends.Michelson.Types
                       Juvix.Backends.Michelson.Lift
                       Juvix.Backends.Michelson.Optimization
                       Juvix.Backends.Michelson.Emit
                       Juvix.Backends.Michelson.Interpreter
                       Juvix.Core.Types
                       Juvix.Core.CompilerTypes
                       Juvix.Core.Dynamic
                       Juvix.Core.Utility
                       Juvix.Core.GHC
                       Juvix.Core
                       Juvix.Interactive
                       Juvix.Frontend.GHC
                       Juvix.Transpiler.Utility
                       Juvix.Transpiler.PrettyPrint
                       Juvix.Transpiler
                       Juvix.Transpiler.CoreToExpr
                       Juvix.Transpiler.CoreToType
                       Juvix.Transpiler.TypeToType
                       Juvix.Transpiler.SimplifyExpr
                       Juvix.Transpiler.ExprToMichelson
                       Juvix.Transpiler.Encoding
  other-modules:       Paths_juvix
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NoMonomorphismRestriction
                     , RankNTypes
                     , LambdaCase
                     , UnicodeSyntax
                     , GADTs
                     , ScopedTypeVariables
                     , MultiParamTypeClasses
                     , FlexibleContexts
                     , FunctionalDependencies
                     , DeriveGeneric
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , TypeOperators
                     , InstanceSigs
                     , ExistentialQuantification
                     , StandaloneDeriving
                     , MultiWayIf
                     , KindSignatures
                     , QuasiQuotes
                     , ConstraintKinds
                     , GeneralizedNewtypeDeriving
                     , DeriveAnyClass
                     , DerivingStrategies
                     , DefaultSignatures
  build-depends:       base >= 4.10.0.0 && < 5
                     , foundation
                     , containers
                     , mtl
                     , text
                     , bytestring
                     , safe
                     , ghc
                     , ghc-prim
                     , ghc-paths
                     , ghc-boot
                     , ghci
                     , unix
                     , ansi-terminal
                     , raw-strings-qq
                     , idris
  ghc-options:         -j4 -ferror-spans -Wall -fno-warn-orphans -fno-warn-name-shadowing -O0
